# ProjetoFinal_embtech

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  PROJECT_SUMMARY.md  QUICKSTART.md  Readme.md  lwipopts.h
include/: config.h  firewall.h  http_server.h  network_monitor.h  system_monitor.h  user_config.h  web_ui.h
scripts/: build.sh
src/: config.c  firewall.c  http_server.c  main.c  network_monitor.c  system_monitor.c  web_ui.c
